# kb-web

./: .gitignore  CHANGELOG.md  README.md  build.py  kb-web-mcp.service  kb-web.service  pyproject.toml
.github/workflows/: test-and-release.yml
browser_extension/: background.js  manifest.json  options.html  options.js
scripts/: install_service.sh  manage.sh
src/kb_web/: __init__.py  base.py  cli.py  config.py  cron_scheduler.py  db.py  gotify.py  gunicorn_runner.py  mcp_server.py  models.py  server.py  utils.py
src/kb_web/routers/: admin.py  api.py  auth.py  collections.py  cron.py  graph.py  pages.py  sites.py
src/kb_web/templates/: admin.j2.html  base.j2.html  collection_editor.j2.html  collections.j2.html  cron_jobs.j2.html  login.j2.html  logs.j2.html  pages_list.j2.html  similarity_graph.j2.html  sites_list.j2.html  tags.j2.html  url_import.j2.html  url_import_notification.j2.txt  view_collection.j2.html  view_cron_job.j2.html  view_page.j2.html  view_site.j2.html
tests/: test_server.py
